@@ -4,9 +4,12 @@
  [Dependencies::Stats]
  - Dependencies changed since 2.022001, see misc/*.deps* for details
  - configure: ↑1
- - develop: ↑20
- - runtime: ↑23
+ - develop: ↑19
+ - runtime: ↑22
  - test: ↑1
+
+ [Minor]
+ - Drop BuiltWith data from META.* and isolate in own file.
 
 2.022001 2014-12-10T09:57:13Z d29ce03
  [00 Minor]
